fixed overflow behavior of sidemenu and notesmenu

--- a/components/GlobalSearchBar/GlobalSearchBar.module.scss
+++ b/components/GlobalSearchBar/GlobalSearchBar.module.scss
@@ -54,7 +54,7 @@
     .active {
         z-index: 20;
         width: 100%;
-        background-color: rgba(255, 255, 255, 0.16) !important;
+        background-color: rgba(62, 66, 81, 0.5) !important;
     }
 }
 
