--- a/components/SideMenu/SideMenu.module.scss
+++ b/components/SideMenu/SideMenu.module.scss
@@ -157,3 +157,8 @@
     outline: none;
     padding-left: 1rem;
 }
+
+.content {
+    max-height: 100%;
+    overflow: auto;
+}
