--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -35,6 +35,6 @@ a {
     background-clip: content-box;
 }
 
-::-webkit-scrollbar-thumb:hover {
-    background-color: #d6dee1;
+::-webkit-scrollbar-thumb:active {
+    background-color: $primary;
 }
